--- a/index.html
+++ b/index.html
@@ -3,34 +3,49 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Privacy Policy - Draw App</title>
+    <title>Privacy Policy & Terms of Service - Draw App</title>
     <style>
-        body { font-family: sans-serif; line-height: 1.6; padding: 40px; max-width: 800px; margin: auto; color: #333; }
-        h1 { border-bottom: 2px solid #333; padding-bottom: 10px; }
-        h2 { margin-top: 30px; color: #000; }
-        .footer { margin-top: 50px; font-size: 0.8em; color: #888; }
+        body { font-family: -apple-system, system-ui, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif; line-height: 1.6; padding: 40px; max-width: 800px; margin: auto; color: #333; background-color: #fcfcfc; }
+        h1 { border-bottom: 2px solid #333; padding-bottom: 10px; font-size: 26px; color: #000; }
+        h2 { margin-top: 30px; color: #000; font-size: 19px; border-left: 4px solid #333; padding-left: 10px; }
+        ul { padding-left: 20px; }
+        li { margin-bottom: 10px; }
+        .contact-box { background-color: #f0f0f0; padding: 20px; border-radius: 8px; margin-top: 30px; font-weight: bold; }
+        .footer { margin-top: 50px; font-size: 0.8em; color: #888; text-align: center; border-top: 1px solid #eee; padding-top: 20px; }
     </style>
 </head>
 <body>
     <h1>Privacy Policy and Terms of Service</h1>
     <p><strong>App Name:</strong> Draw</p>
-    <p><strong>Effective Date:</strong> 2026-02-14</p>
+    <p><strong>Effective Date:</strong> Feb 14, 2026</p>
 
-    <h2>1. Data Collection</h2>
-    <p>Draw app collects the following information for service operation:</p>
+    <p>This document explains how the <strong>Draw</strong> app handles user data and the rules for our reward-based entertainment service. By using the app, you agree to these terms.</p>
+
+    <h2>1. Data Collection and Usage</h2>
     <ul>
-        <li><strong>Email Address:</strong> For user identification and account security.</li>
-        <li><strong>Device ID:</strong> For analytics and preventing service abuse.</li>
+        <li><strong>Email Address:</strong> Collected via social login (Google) to manage your account and synchronize earned reward points (Units).</li>
+        <li><strong>Device Identifiers:</strong> Collected for analytics, crash reporting, and preventing multiple account abuse or fraudulent activities.</li>
+        <li><strong>Activity Data:</strong> We track in-app engagement to ensure rewards are distributed fairly based on legitimate user participation.</li>
     </ul>
 
-    <h2>2. Terms of Service</h2>
-    <p>This app provides reward-based entertainment. All points(Units) are virtual and cannot be exchanged for real money. No real-world gambling is involved in this app.</p>
+    <h2>2. Reward System & Gift Card Policy</h2>
+    <ul>
+        <li><strong>In-App Units:</strong> Users can earn virtual points ("Units") through legitimate in-app activities. These Units are promotional in nature.</li>
+        <li><strong>Reward Redemption:</strong> Units may be redeemed for digital rewards, such as <strong>Amazon Gift Cards or Google Play Gift Cards</strong>, subject to availability and our verification process.</li>
+        <li><strong>No Real Money Gambling:</strong> Draw is NOT a gambling app. There is no opportunity to wager real money or win prizes based on chance or betting. All rewards are earned solely through task-based participation.</li>
+    </ul>
 
-    <h2>3. Contact</h2>
-    <p>If you have any questions, please contact us at: <strong>[monoplain.labs@gmail.com]</strong></p>
+    <h2>3. User Data Protection</h2>
+    <p>We use HTTPS encryption for all data transmissions. Your information is retained only as long as necessary to provide our services or until you request account deletion.</p>
+
+    <h2>4. Account Deletion and Rights</h2>
+    <p>You may request account and data deletion at any time via the app settings or by contacting our support email.</p>
+
+    <div class="contact-box">
+        5. Contact Us<br>
+        For inquiries, please contact: [monoplain.labs@gmail.com]
+    </div>
 
     <div class="footer">
         © 2026 Draw App. All rights reserved.
     </div>
-</body>
-</html>
