--- a/index.html
+++ b/index.html
@@ -33,6 +33,9 @@
         <li><strong>In-App Units:</strong> Users can earn virtual points ("Units") through legitimate in-app activities. These Units are promotional in nature.</li>
         <li><strong>Reward Redemption:</strong> Units may be redeemed for digital rewards, such as <strong>Amazon Gift Cards or Google Play Gift Cards</strong>, subject to availability and our verification process.</li>
         <li><strong>No Real Money Gambling:</strong> Draw is NOT a gambling app. There is no opportunity to wager real money or win prizes based on chance or betting. All rewards are earned solely through task-based participation.</li>
+        <li><strong>No Purchase Necessary:</strong> Participation in any drawing or reward activity within the Draw app is completely free. No monetary payment, deposit, or in-app purchase is required to enter or win. Entries are earned solely through legitimate in-app engagement and activity.</li>
+        <li><strong>Skill and Engagement Based:</strong> Our reward system is not a game of chance based on wagering. It is an engagement-based reward platform designed to recognize and compensate users for their consistent participation and accumulated activity points within the app.</li>
+        <li><strong>Promotional Drawing:</strong> All ball-matching simulations (5 White balls, 1 Powerball) are defined as promotional events intended for entertainment purposes only. This serves as a transparent and fair method for distributing rewards to our active users as part of a marketing promotion.</li>
     </ul>
 
     <h2>3. User Data Protection</h2>
@@ -43,7 +46,7 @@
 
     <div class="contact-box">
         5. Contact Us<br>
-        For inquiries, please contact: [monoplain.labs@gmail.com]
+        For inquiries, please contact: monoplain.labs@gmail.com
     </div>
 
     <div class="footer">
